# msc-thesis-gnn-nbody

./: .gitignore  .ignore  LICENSE  README.md  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yaml
colab/: evaluate_report_artifacts.ipynb  train_colab.ipynb
configs/: data.yaml  data_stratified.yaml  data_stratified_smoke.yaml  egnn.yaml  egnn_accel.yaml  egnn_curriculum.yaml  egnn_curriculum_stratified.yaml  egnn_curriculum_stratified_smoke.yaml  egnn_multistep.yaml  egnn_multistep_finetune.yaml  egnn_multistep_finetune_h10.yaml  egnn_multistep_finetune_h25.yaml  egnn_multistep_finetune_h50_nf0p1.yaml  hgnn.yaml  hgnn_curriculum.yaml  hgnn_curriculum_stratified.yaml  hgnn_curriculum_stress.yaml  scaling_runs.yaml
data/: _io.py  _types.py  config.yaml  dataset.py  encounters.py  generate.py  generate_eval_set.py  test_dataset.py  test_encounters.py  test_generate.py  test_generate_eval_set.py  test_io.py  types.py  visualize.ipynb
docs/: product-specification.md  repository-architecture.md
evaluation/: README.md  _binning.py  _io.py  _loader.py  _types.py  _utils.py  animate_best.py  egnn.ipynb  evaluate.py  evaluate_baseline.py  evaluate_chunked.py  hgnn.ipynb  hgnn_visual_diagnostics.ipynb  metrics.py  plots.py  report.py  report_figures.py  report_generalization.py  report_tables.py  rollout_score.py  scaling_report.py  test_animate_best.py  test_binning.py  test_evaluate.py  test_evaluate_baseline.py  test_evaluate_chunked.py  test_io.py  test_loader.py  test_metrics.py  test_report.py  test_report_figures.py  test_report_generalization.py  test_report_tables.py  test_rollout_score.py  test_scaling_report.py  test_types.py  test_utils.py  visual_diagnostics.ipynb
interpretability/: __init__.py  _io.py  _types.py  analysis.py  interpretability.ipynb  plots.py  probes.py  symbolic.py  test_io.py  test_probes.py  test_symbolic.py
models/: baselines.py  egnn.py  egnn_accel.py  hgnn.py  test_baselines.py  test_egnn.py  test_egnn_accel.py  test_hgnn.py
notebooks/: train_colab.ipynb
training/: _io.py  _types.py  diagnostics.py  egnn.yaml  hgnn.yaml  rollout_score.py  scaling.py  sweep.py  test_io.py  test_rollout_score.py  test_scaling.py  test_sweep.py  test_train.py  train.py  types.py
